Change the display id to the name of each table

--- a/RentalKendaraan_045/Views/Peminjamen/Delete.cshtml
+++ b/RentalKendaraan_045/Views/Peminjamen/Delete.cshtml
@@ -27,19 +27,19 @@
             @Html.DisplayNameFor(model => model.IdCostumerNavigation)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.IdCostumerNavigation.IdCustomer)
+            @Html.DisplayFor(model => model.IdCostumerNavigation.NamaCustomer)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.IdJaminanNavigation)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.IdJaminanNavigation.IdJaminan)
+            @Html.DisplayFor(model => model.IdJaminanNavigation.NamaJaminan)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.IdKendaraanNavigation)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.IdKendaraanNavigation.IdKendaraan)
+            @Html.DisplayFor(model => model.IdKendaraanNavigation.NamaKendaraan)
         </dd>
     </dl>
     
