change display name in customer

--- a/RentalKendaraan_045/Views/Customers/Delete.cshtml
+++ b/RentalKendaraan_045/Views/Customers/Delete.cshtml
@@ -39,7 +39,7 @@
             @Html.DisplayNameFor(model => model.IdGenderNavigation)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.IdGenderNavigation.IdGender)
+            @Html.DisplayFor(model => model.IdGenderNavigation.NamaGender)
         </dd>
     </dl>
     
