--- a/RentalKendaraan_045/Views/Customers/Details.cshtml
+++ b/RentalKendaraan_045/Views/Customers/Details.cshtml
@@ -38,7 +38,7 @@
             @Html.DisplayNameFor(model => model.IdGenderNavigation)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.IdGenderNavigation.IdGender)
+            @Html.DisplayFor(model => model.IdGenderNavigation.NamaGender)
         </dd>
     </dl>
 </div>
