--- a/RentalKendaraan_045/Views/Customers/Index.cshtml
+++ b/RentalKendaraan_045/Views/Customers/Index.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.NoHp)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IdGenderNavigation.IdGender)
+                @Html.DisplayFor(modelItem => item.IdGenderNavigation.NamaGender)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.IdCustomer">Edit</a> |
