Add All validations

--- a/RentalKendaraan_045/Views/Kendaraans/Delete.cshtml
+++ b/RentalKendaraan_045/Views/Kendaraans/Delete.cshtml
@@ -39,7 +39,7 @@
             @Html.DisplayNameFor(model => model.IdJenisKendaraanNavigation)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.IdJenisKendaraanNavigation.IdJenisKendaraan)
+            @Html.DisplayFor(model => model.IdJenisKendaraanNavigation.NamaJenisKendaraan)
         </dd>
     </dl>
     
