--- a/RentalKendaraan_045/Views/Kendaraans/Index.cshtml
+++ b/RentalKendaraan_045/Views/Kendaraans/Index.cshtml
@@ -13,7 +13,7 @@
 {
     <p>
         Ketersediaan: @Html.DropDownList("ktsd", "Pilih Ketersediaan")
-
+        Cari Data: @Html.TextBox("searchString")
         <input type="submit" value="Filter" />
     </p>
 }
